코드 구조 정리 및 주석 추가, 공통 컴포넌트 분리

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,8 @@
       name="description"
       content="성북구 정릉동 시설 지도"
     />
-    <title>정릉동 모아보기</title>
+    <title>정릉동 시설 지도</title>
+    <!-- 카카오맵 API 불러오기 (지도 기능용) -->
     <script
       type="text/javascript"
       src="https://dapi.kakao.com/v2/maps/sdk.js?appkey=3ffa9c0dd348e5aacd7d3c618ac9654e&libraries=services">
